--- a/Assets/RainOfCube/RainOfCube.asmdef
+++ b/Assets/RainOfCube/RainOfCube.asmdef
@@ -2,7 +2,8 @@
     "name": "RainOfCube",
     "rootNamespace": "RainOfCube",
     "references": [
-        "GUID:e201b184112dd554db7fc12e350542e9"
+        "GUID:e201b184112dd554db7fc12e350542e9",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
